--- a/nodepop/package.json
+++ b/nodepop/package.json
@@ -1,19 +1,22 @@
 {
-    "name": "nodepop",
-    "version": "0.0.0",
-    "private": true,
-    "scripts": {
-        "start": "node ./bin/www",
-        "install_db": "node ./install_db"
-    },
-    "dependencies": {
-        "body-parser": "~1.13.2",
-        "cookie-parser": "~1.3.5",
-        "debug": "~2.2.0",
-        "ejs": "~2.3.3",
-        "express": "~4.13.1",
-        "mongoose": "^4.4.7",
-        "morgan": "~1.6.1",
-        "serve-favicon": "~2.3.0"
-    }
+  "name": "nodepop",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www",
+    "install_db": "node ./install_db"
+  },
+  "dependencies": {
+    "basic-auth": "^1.0.3",
+    "basic-auth-mongoose": "^0.1.1",
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "ejs": "~2.3.3",
+    "express": "~4.13.1",
+    "mongoose": "^4.4.7",
+    "morgan": "~1.6.1",
+    "password-hash": "^1.2.2",
+    "serve-favicon": "~2.3.0"
+  }
 }
