--- a/nodepop/package.json
+++ b/nodepop/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^4.4.7",
     "morgan": "~1.6.1",
     "password-hash": "^1.2.2",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "sha256": "^0.2.0"
   }
 }
